bitfields/tests/compile_error_cases/bitfield_field_access_read_only_can_not_write.stderr
error[E0599]: no method named `set_a` found for struct `Bitfield` in the current scope
  --> tests/compile_error_cases/bitfield_field_access_read_only_can_not_write.rs:14:14
   |
 6 | #[bitfield(u32)]
   | ---------------- method `set_a` not found for this struct
...
14 |     bitfield.set_a(0x34);
   |              ^^^^^ method not found in `Bitfield`
